Use "kiten" as the program icon for kitenkanjirbrowser and kitenradselect

BUG: 312779
FIXED-IN : 4.10.0